# pidr2017

./: CMakeLists.txt  simulation.ttt
scripts/: Comportement.py  claques.py  detectionprimaire.py  esquive.py  reconstitution.py  reconstitutiontotalenplan.py  simulation_people.py  simulation_people_manual.py  simulation_robot.py  talker.py  turtlepos.py
src/: AbstractProgram.cpp  AbstractProgram.hpp  Camera.cpp  Camera.hpp  DetectCircles2Program.cpp  DetectCircles2Program.hpp  DetectCirclesProgram.cpp  DetectCirclesProgram.hpp  DetectPeoplesProgram.cpp  DetectPeoplesProgram.hpp  FpsCounter.cpp  FpsCounter.hpp  People.cpp  People.hpp  ReadProgram.cpp  ReadProgram.hpp  RecordProgram.cpp  RecordProgram.hpp  Send2DMapProgram.cpp  Send2DMapProgram.hpp  SendPeopleProgram.cpp  SendPeopleProgram.hpp  Service.hpp  basicturtle.cpp  cam.cpp  reconstitutionpartiel.cpp
src/PointCloudViewer/: CameraGL.hpp  PointCloud.cpp  PointCloud.hpp  Simple3DObject.cpp  Simple3DObject.hpp  Viewer.cpp  Viewer.hpp
srv/: CamToAlg.srv  CamToAlgPeople.srv
